---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: ???
  Changes:
    - Updated for Factorio 2.0 (994)
---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: 22.12.2023
  Changes:
    - Cleanup of prototype data
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 19.12.2021
  Changes:
    - Added tips and tricks for the CAB
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 26.05.2021
  Changes:
    - Changed and expanded locale strings and text descriptions (489)
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 27.11.2020
  Changes:
    - Patched load-order issue when playing without angels
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 26.11.2020
  Changes:
    - Update to Factorio version 1.1
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 29.10.2020
  Changes:
    - More localisation changes to unify angels localisation across mods (372)
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 17.07.2020
  Changes:
    - Made localisation conform with base game (342)
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 29.05.2020
  Changes:
    - Properly use name, amount in result and ingredient prototypes
    - Consistency in assigning angelsmods in data stage
  Bugfixes:
    - MP safer method of requiring files (check inside the file instead of around)