@@ -2,6 +2,7 @@ local minimap_representation = data.raw["locomotive"]["locomotive"].minimap_repr
 local selected_minimap_representation = data.raw["locomotive"]["locomotive"].selected_minimap_representation
 
 local funcs = require("prototypes.train-functions")
+local simulations = require("prototypes.factoriopedia-simulations")
 
 local fixed_tint = { r = 119 / 255, g = 127 / 255, b = 113 / 255, a = 0.8 }
 local tintable_tint = { r = 1, g = 0.38, b = 0.0, a = 0.5 } -- alpha must be 0.5 due to base game...
@@ -38,6 +39,7 @@ funcs.generate_train_entities({
   max_health = 2500,
   corpse = "medium-remnants",
   dying_explosion = "medium-explosion",
+  factoriopedia_simulation = simulations.factoriopedia_smelting_locomotive_tender,
   collision_box = { { -0.6, -2.6 }, { 0.6, 2.6 } },
   selection_box = { { -1, -3 }, { 1, 3 } },
   weight = 3000,
