@@ -1,4 +1,5 @@
 local sounds = require("__base__.prototypes.entity.sounds")
+local simulations =require("prototypes.factoriopedia-simulations")
 
 data:extend({
   {
@@ -18,6 +19,7 @@ data:extend({
     icon_size = 32,
     flags = { "placeable-player", "player-creation", "placeable-off-grid", "not-on-map" },
     minable = { mining_time = 0.1, result = "cargo-robot" },
+    factoriopedia_simulation = simulations.factoriopedia_cargo_robot,
     max_health = 100,
     collision_box = { { 0, 0 }, { 0, 0 } },
     selection_box = { { -0.5, -1.5 }, { 0.5, -0.5 } },
@@ -139,6 +141,7 @@ data:extend({
     icon_size = 32,
     flags = { "placeable-player", "player-creation", "placeable-off-grid", "not-on-map" },
     minable = { mining_time = 0.1, result = "cargo-robot-2" },
+    factoriopedia_simulation = simulations.factoriopedia_cargo_robot_2,
     max_health = 100,
     collision_box = { { 0, 0 }, { 0, 0 } },
     selection_box = { { -0.5, -1.5 }, { 0.5, -0.5 } },
