@@ -37,6 +37,7 @@ data:extend({
     dying_explosion = "medium-explosion",
     energy_per_hit_point = 0.03,
     immune_to_tree_impacts = true,
+    trash_inventory_size = 20,
     resistances = {
       {
         type = "fire",
